force-app/main/default/objects/ysign__Yousign_Procedure_Event__e/ysign__Yousign_Procedure_Event__e.object-meta.xml
<CustomObject>
    <label>Yousign Procedure Event</label>
    <pluralLabel>Yousign Procedure Events</pluralLabel>
</CustomObject>