force-app/main/default/objects/ysign__Yousign_Procedure_Event__e/fields/ysign__Object_Id__c.field-meta.xml
<CustomField>
    <fullName>ysign__Object_Id__c</fullName>
    <label>Object Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>