force-app/main/default/objects/ysign__Yousign_Procedure_Event__e/fields/ysign__Procedure_Id__c.field-meta.xml
<CustomField>
    <fullName>ysign__Procedure_Id__c</fullName>
    <label>Procedure Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>