force-app/main/default/objects/ysign__Yousign_Procedure_Event__e/fields/ysign__Status__c.field-meta.xml
<CustomField>
    <fullName>ysign__Status__c</fullName>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>