force-app/main/default/objects/ysign__Yousign_Procedure_Event__e/fields/ysign__Yousign_Procedure_Id__c.field-meta.xml
<CustomField>
    <fullName>ysign__Yousign_Procedure_Id__c</fullName>
    <label>Yousign Procedure Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>